--- a/Buptis/Resources/layout/PublicProfileBaseActivity.axml
+++ b/Buptis/Resources/layout/PublicProfileBaseActivity.axml
@@ -107,7 +107,7 @@
 					android:textAppearance="?android:attr/textAppearanceMedium"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
-					android:id="@+id/textView2" />
+					android:id="@+id/textView" />
 			</LinearLayout>
 			<View
 				android:layout_margin="20dp"
@@ -150,7 +150,7 @@
 				android:textAppearance="?android:attr/textAppearanceMedium"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:id="@+id/textView2" />
+				android:id="@+id/textView4" />
 			<TextView
 				android:textSize="15dp"
 				android:layout_marginTop="10dp"
@@ -160,7 +160,7 @@
 				android:textAppearance="?android:attr/textAppearanceSmall"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:id="@+id/textView3" />
+				android:id="@+id/textView5" />
 			<View
 				android:layout_margin="20dp"
 				android:background="#E6E6E6"
