--- a/Buptis/Resources/layout/Rustomradiobutton.axml
+++ b/Buptis/Resources/layout/Rustomradiobutton.axml
@@ -11,13 +11,13 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:id="@+id/linearLayout1">
-	<RadioButton
+		<RadioButton
 			android:textColor="#fff"
 			android:textStyle="bold"
 			android:textSize="22dp"
 			android:text="   İngilizce"
 			android:button="@drawable/customradiobutton"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/radioButton2" />
 	</LinearLayout>
