--- a/Buptis/Resources/layout/PrivateProfileViewPagerSonuc.axml
+++ b/Buptis/Resources/layout/PrivateProfileViewPagerSonuc.axml
@@ -9,7 +9,8 @@
 		android:minHeight="25px"
 		android:layout_width="match_parent"
 		android:layout_height="62dp"
-		android:id="@+id/linearLayout3">
+		android:id="@+id/linearLayout3"
+		android:layout_marginTop="27.5dp">
 		<ImageButton
 			android:src="@drawable/close1"
 			android:layout_gravity="center"
@@ -22,7 +23,8 @@
 			android:scaleType="centerInside"
 			android:layout_centerInParent="true"
 			android:layout_alignParentRight="true"
-			android:id="@+id/ımageButton3" />
+			android:id="@+id/ımageButton3"
+			android:layout_marginTop="10.0dp" />
 	</RelativeLayout>
 	<TextView
 		android:layout_marginTop="55.5dp"
