--- a/Buptis/Resources/layout/PrivateProfileBizeYazin.axml
+++ b/Buptis/Resources/layout/PrivateProfileBizeYazin.axml
@@ -43,88 +43,81 @@
                     android:id="@+id/textView1" />
 			</RelativeLayout>
 		</LinearLayout>
-		<LinearLayout
-			android:orientation="vertical"
-			android:minWidth="25px"
-			android:minHeight="25px"
+	<LinearLayout
+		android:orientation="vertical"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:id="@+id/linearLayout4">
+		<TextView
+			android:textSize="15dp"
+			android:textStyle="bold"
+			android:layout_marginLeft="20dp"
+			android:layout_marginTop="20dp"
+			android:textColor="#EEEFEF"
+			android:text="Konu"
+			android:textAppearance="?android:attr/textAppearanceMedium"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:id="@+id/linearLayout4" >
-			<TextView
-				android:textSize="15dp"
-				android:textStyle="bold"
-				android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-				android:textColor="#EEEFEF"
-				android:text="Konu"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/textView2" />
-        <TextView
-				android:textSize="15dp"
-				android:layout_marginLeft="20dp"
-				android:textColor="#EEEFEF"
-				android:text="Lorem Upsum"
-				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/textView3" />
-			<View
-				android:layout_margin="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view1" />
-            <TextView
-				android:textSize="15dp"
-				android:textStyle="bold"
-				android:layout_marginLeft="20dp"
-				android:textColor="#EEEFEF"
-				android:text="Mesajınız"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/textView4" />
-            <ScrollView
-                android:minWidth="25px"
-                android:minHeight="25px"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/scrollView1" >
-              <LinearLayout
-            android:orientation="vertical"
-            android:minWidth="25px"
-            android:minHeight="25px"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout5">
-        	<TextView
-				android:textSize="15dp"
-				android:layout_marginLeft="20dp"
-				android:textColor="#EEEFEF"
-				android:text="Lorem Upsum Lorem Upsum Lorem Upsum Lorem Upsum Lorem Upsum Lorem Upsum Lorem Upsum "
-				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:layout_width="match_parent"
-				android:layout_height="200dp"
-				android:id="@+id/textView5" />
-              </LinearLayout>
-            </ScrollView>
-        	<View
-				android:layout_margin="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view2" />
-        <Button
-            android:text="Gönder"
-            android:layout_width="200dp"
-            android:layout_marginLeft="20dp"
-            android:textColor="#EEEFEF"
-            android:textSize="22dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/custombuton"
-            android:id="@+id/button1" />
-		</LinearLayout>
+			android:layout_height="wrap_content"
+			android:id="@+id/textView2" />
+		<EditText
+			android:textColorHint="#ddd"
+			android:hint="Bir konu belirtin..."
+			android:background="@null"
+			android:textSize="15dp"
+			android:layout_marginLeft="20dp"
+			android:layout_marginRight="20dp"
+			android:textColor="#EEEFEF"
+			android:inputType="textPersonName"
+			android:layout_width="match_parent"
+			android:layout_height="56.5dp"
+			android:id="@+id/editText1" />
+		<View
+			android:layout_margin="20dp"
+			android:background="#6E6E6E"
+			android:layout_width="match_parent"
+			android:layout_height="2dp"
+			android:id="@+id/view1" />
+		<TextView
+			android:textSize="15dp"
+			android:textStyle="bold"
+			android:layout_marginLeft="20dp"
+			android:textColor="#EEEFEF"
+			android:text="Mesajınız"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/textView4" />
+		<EditText
+			android:gravity="left"
+			android:textColorHint="#ddd"
+			android:hint="İletmek istediğiniz mesajı yazın..."
+			android:background="@null"
+			android:textSize="15dp"
+			android:layout_marginLeft="20dp"
+			android:layout_marginRight="20dp"
+			android:textColor="#EEEFEF"
+			android:inputType="textMultiLine"
+			android:layout_width="match_parent"
+			android:layout_height="186.5dp"
+			android:id="@+id/editText2"
+			android:layout_marginTop="9.5dp" />
+		<View
+			android:layout_margin="20dp"
+			android:background="#6E6E6E"
+			android:layout_width="match_parent"
+			android:layout_height="2dp"
+			android:id="@+id/view2" />
+		<Button
+			android:text="Gönder"
+			android:layout_width="200dp"
+			android:layout_marginLeft="20dp"
+			android:textColor="#EEEFEF"
+			android:textSize="22dp"
+			android:layout_height="wrap_content"
+			android:background="@drawable/custombuton"
+			android:id="@+id/button1" />
+	</LinearLayout>
 	
 </LinearLayout>
