--- a/Buptis/Resources/layout/PrivateProfileTemelBilgiler.axml
+++ b/Buptis/Resources/layout/PrivateProfileTemelBilgiler.axml
@@ -1,151 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical"
 	android:background="#221e20"
 	android:id="@+id/rootView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-		<LinearLayout
-			android:background="@drawable/lokasyonlarheadergradient"
-			android:orientation="vertical"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
+	<LinearLayout
+		android:background="@drawable/lokasyonlarheadergradient"
+		android:orientation="vertical"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="105.5dp"
+		android:id="@+id/linearLayout1">
+		<RelativeLayout
+			android:layout_marginTop="39.5dp"
+			android:layout_marginLeft="15dp"
+			android:layout_marginRight="20dp"
 			android:minWidth="25px"
 			android:minHeight="25px"
 			android:layout_width="match_parent"
-			android:layout_height="80dp"
-			android:id="@+id/linearLayout1">
-			<RelativeLayout
-				android:layout_marginTop="20dp"
-				android:layout_marginLeft="15dp"
-				android:layout_marginRight="20dp"
-				android:minWidth="25px"
-				android:minHeight="25px"
-				android:layout_width="match_parent"
-				android:layout_height="40dp"
-				android:id="@+id/relativeLayout1">
-				<ImageButton
-					android:padding="10dp"
-					android:background="@null"
-					android:scaleType="centerInside"
-					android:src="@mipmap/geriicon"
-					android:layout_width="40dp"
-					android:layout_height="match_parent"
-					android:id="@+id/ımageButton1" />
-                <TextView
-                    android:text="Temel Bilgiler"
-                    android:layout_width="150dp"
-                    android:textColor="#fff"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="22dp"
-                    android:textStyle="bold"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/ımageButton1"
-                    android:id="@+id/textView1" />
-			</RelativeLayout>
-		</LinearLayout>
-	
-		<LinearLayout
-			android:orientation="vertical"
+			android:layout_height="40dp"
+			android:id="@+id/relativeLayout1">
+			<ImageButton
+				android:padding="10dp"
+				android:background="@null"
+				android:scaleType="centerInside"
+				android:src="@mipmap/geriicon"
+				android:layout_width="40dp"
+				android:layout_height="match_parent"
+				android:id="@+id/ımageButton1" />
+			<TextView
+				android:text="Temel Bilgiler"
+				android:layout_width="150dp"
+				android:textColor="#fff"
+				android:layout_marginTop="3dp"
+				android:layout_marginLeft="5dp"
+				android:textSize="22dp"
+				android:textStyle="bold"
+				android:layout_height="wrap_content"
+				android:layout_toRightOf="@+id/ımageButton1"
+				android:id="@+id/textView1" />
+		</RelativeLayout>
+	</LinearLayout>
+	<LinearLayout
+		android:orientation="vertical"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:id="@+id/linearLayout4">
+		<TextView
+			android:textSize="15dp"
+			android:textStyle="bold"
+			android:layout_marginLeft="20dp"
+			android:layout_marginTop="20dp"
+			android:textColor="#EEEFEF"
+			android:text="İsim"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/textView2" />
+		<TextView
+			android:textSize="15dp"
+			android:layout_marginLeft="20dp"
+			android:textColor="#EEEFEF"
+			android:text="..."
+			android:textAppearance="?android:attr/textAppearanceSmall"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/textView4" />
+		<View
+			android:layout_margin="20dp"
+			android:background="#6E6E6E"
+			android:layout_width="match_parent"
+			android:layout_height="2dp"
+			android:id="@+id/view1" />
+		<TextView
+			android:textSize="15dp"
+			android:textStyle="bold"
+			android:layout_marginLeft="20dp"
+			android:textColor="#EEEFEF"
+			android:text="Doğum Tarihi"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/textView3" />
+		<TextView
+			android:textSize="15dp"
+			android:layout_marginLeft="20dp"
+			android:textColor="#EEEFEF"
+			android:text="..."
+			android:textAppearance="?android:attr/textAppearanceSmall"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/dogumtxt" />
+		<View
+			android:layout_margin="20dp"
+			android:background="#6E6E6E"
+			android:layout_width="match_parent"
+			android:layout_height="2dp"
+			android:id="@+id/view2" />
+		<TextView
+			android:textSize="15dp"
+			android:textStyle="bold"
+			android:layout_marginLeft="20dp"
+			android:textColor="#EEEFEF"
+			android:text="Meslek"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/textView3" />
+		<EditText
+			android:textColorHint="#EEEFEF"
+			android:hint="Mesleğini yaz..."
+			android:background="@null"
+			android:textSize="15dp"
+			android:layout_marginLeft="20dp"
+			android:textColor="#EEEFEF"
+			android:layout_marginRight="20dp"
+			android:inputType="textPersonName"
+			android:layout_width="match_parent"
+			android:layout_height="42.0dp"
+			android:id="@+id/editText1"
+			android:layout_marginTop="0.0dp" />
+		<View
+			android:layout_margin="20dp"
+			android:background="#6E6E6E"
+			android:layout_width="match_parent"
+			android:layout_height="2dp"
+			android:id="@+id/view2"
+			android:layout_marginTop="9.0dp" />
+		<TextView
+			android:textSize="15dp"
+			android:textStyle="bold"
+			android:layout_marginLeft="20dp"
+			android:textColor="#EEEFEF"
+			android:text="Cinsiyet"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/textView3" />
+		<RadioGroup
+			android:orientation="horizontal"
 			android:minWidth="25px"
 			android:minHeight="25px"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:id="@+id/linearLayout4" >
-			<TextView
-				android:textSize="15dp"
-				android:textStyle="bold"
-				android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-				android:textColor="#EEEFEF"
-				android:text="İsim"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/textView2" />
-        <TextView
-				android:textSize="15dp"
-				android:layout_marginLeft="20dp"
-				android:textColor="#EEEFEF"
-				android:text="Kerem Yüce"
-				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/textView4" />
-			<View
-				android:layout_margin="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view1" />
-			<TextView
-				android:textSize="15dp"
-				android:textStyle="bold"
-				android:layout_marginLeft="20dp"
-				android:textColor="#EEEFEF"
-				android:text="Doğum Tarihi"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/textView3" />
-        	<TextView
-				android:textSize="15dp"
-				android:layout_marginLeft="20dp"
-				android:textColor="#EEEFEF"
-				android:text="15.05.1992"
-				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/textView4" />
-				<View
-				android:layout_margin="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view2" />
-        	<TextView
-				android:textSize="15dp"
-				android:textStyle="bold"
-				android:layout_marginLeft="20dp"
-				android:textColor="#EEEFEF"
-				android:text="Cinsiyet"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/textView3" />
-        <RelativeLayout
-            android:minWidth="25px"
-            android:minHeight="25px"
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/relativeLayout2" >
-
-	    <RadioButton
-			android:textColor="#fff"
-			android:textSize="16dp"
-			android:text="Erkek"
-            android:layout_marginLeft="20dp"
-			android:button="@drawable/customradiobutton"
-			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:id="@+id/radioButton2" />
-       	<RadioButton
-			android:textColor="#fff"
-			android:textSize="16dp"
-			android:text="Kadın"
-            android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@+id/radioButton2"
-			android:button="@drawable/customradiobutton"
-			android:layout_width="wrap_content"
+			android:id="@+id/radioGroup1"
+			android:layout_marginTop="11.0dp">
+			<RadioButton
+				android:textColor="#fff"
+				android:textSize="16dp"
+				android:text="Erkek"
+				android:layout_marginLeft="20dp"
+				android:button="@drawable/customradiobutton"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/radioButton2" />
+			<RadioButton
+				android:textColor="#fff"
+				android:textSize="16dp"
+				android:text="Kadın"
+				android:layout_marginLeft="20dp"
+				android:layout_toRightOf="@+id/radioButton2"
+				android:button="@drawable/customradiobutton"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/radioButton3" />
+		</RadioGroup>
+		
+		<View
+			android:layout_margin="20dp"
+			android:background="#6E6E6E"
+			android:layout_width="match_parent"
+			android:layout_height="2dp"
+			android:id="@+id/view2" />
+		<Button
+			android:layout_gravity="center_horizontal"
+			android:text="Kaydet"
+			android:layout_width="250dp"
+			android:textColor="#EEEFEF"
+			android:textSize="22dp"
 			android:layout_height="wrap_content"
-			android:id="@+id/radioButton3" />
-        	</RelativeLayout>
-				<View
-				android:layout_margin="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view2" />
-		</LinearLayout>
-	
+			android:background="@drawable/custombuton"
+			android:id="@+id/button1"
+			android:layout_marginBottom="0.0dp"
+			android:layout_marginTop="17.5dp" />
+	</LinearLayout>
 </LinearLayout>
