--- a/Buptis/Resources/layout/ChatBaseActivity.axml
+++ b/Buptis/Resources/layout/ChatBaseActivity.axml
@@ -53,8 +53,9 @@
 			android:layout_centerVertical="true"
 			android:src="@mipmap/auser" />
 			<TextView
+				android:layout_gravity="center_horizontal"
 				android:layout_marginTop="5dp"
-				android:text="Mesut P"
+				android:text="..."
 				android:textAppearance="?android:attr/textAppearanceSmall"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
