--- a/Buptis/Resources/layout/GidenMesajBalon.axml
+++ b/Buptis/Resources/layout/GidenMesajBalon.axml
@@ -12,7 +12,7 @@
 		android:layout_marginLeft="50dp"
 		android:layout_marginTop="12.5dp"
 		android:id="@+id/card_view"
-		app:cardBackgroundColor="#221e20"
+		app:cardBackgroundColor="#414042"
 		android:layout_width="wrap_content"
 		app:cardElevation="0dp"
 		app:cardCornerRadius="20dp"
