--- a/Buptis/Resources/layout/PrivateProfileEngelle.axml
+++ b/Buptis/Resources/layout/PrivateProfileEngelle.axml
@@ -43,244 +43,103 @@
                     android:id="@+id/textView1" />
 			</RelativeLayout>
 		</LinearLayout>
-	
-		<LinearLayout
-			android:orientation="vertical"
+	<LinearLayout
+		android:orientation="vertical"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:id="@+id/linearLayout4">
+		<RadioGroup
+			android:layout_marginTop="20dp"
 			android:minWidth="25px"
 			android:minHeight="25px"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:id="@+id/linearLayout4" >
-        <LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="25px"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:id="@+id/linearLayout5" >
-        <RadioButton
-            android:background="@drawable/customradiowhite"
-            android:button="@android:color/transparent"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="2dp"
-            android:checked="true"
-            android:id="@+id/radioButton1" />
-			<TextView
+			android:layout_height="wrap_content"
+			android:id="@+id/radioGroup1">
+			<RadioButton
+				android:checked="true"
+				android:layout_marginBottom="10dp"
 				android:textSize="18dp"
 				android:textStyle="bold"
-				android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
 				android:textColor="#EEEFEF"
-				android:text="Sahte profil"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
+				android:text="  Sahte profil"
+				android:layout_marginLeft="20dp"
+				android:button="@drawable/customradiobutton"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/textView2" />
-            </LinearLayout>
-               
-			<View
-				android:layout_marginTop="5dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view1" />
-			<LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="25px"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:id="@+id/linearLayout5" >
-            <RadioButton
-            android:background="@drawable/customradiowhite"
-            android:button="@android:color/transparent"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:id="@+id/radioButton1" />
-			<TextView
+				android:id="@+id/radioButton1" />
+			<RadioButton
+				android:layout_marginBottom="10dp"
 				android:textSize="18dp"
 				android:textStyle="bold"
-				android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
 				android:textColor="#EEEFEF"
-				android:text="Uygunsuz içerik"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
+				android:text="  Uygunsuz içerik"
+				android:layout_marginLeft="20dp"
+				android:layout_toRightOf="@+id/radioButton2"
+				android:button="@drawable/customradiobutton"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/textView2" />
-            </LinearLayout>
-			<View
-				android:layout_marginTop="5dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view1" />
-        	<LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="25px"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:id="@+id/linearLayout5" >
-        <RadioButton
-            android:background="@drawable/customradiowhite"
-            android:button="@android:color/transparent"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="2dp"
-            android:id="@+id/radioButton1" />
-			<TextView
+				android:id="@+id/radioButton2" />
+			<RadioButton
+				android:layout_marginBottom="10dp"
 				android:textSize="18dp"
 				android:textStyle="bold"
-				android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
 				android:textColor="#EEEFEF"
-				android:text="Kabalık ve saygısızlık"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
+				android:text="  Kabalık ve saygısızlık"
+				android:layout_marginLeft="20dp"
+				android:button="@drawable/customradiobutton"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/textView2" />
-            </LinearLayout>
-			<View
-				android:layout_marginTop="5dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view1" />
-        <LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="25px"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:id="@+id/linearLayout5" >
-        <RadioButton
-            android:background="@drawable/customradiowhite"
-            android:button="@android:color/transparent"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-            android:layout_marginBottom="2dp"
-            android:id="@+id/radioButton1" />
-			<TextView
+				android:id="@+id/radioButton3" />
+			<RadioButton
+				android:layout_marginBottom="10dp"
 				android:textSize="18dp"
 				android:textStyle="bold"
-				android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
 				android:textColor="#EEEFEF"
-				android:text="Spam"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
+				android:text="  Spam"
+				android:layout_marginLeft="20dp"
+				android:layout_toRightOf="@+id/radioButton2"
+				android:button="@drawable/customradiobutton"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/textView2" />
-            </LinearLayout>
-        <View
-				android:layout_marginTop="5dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view1" />
-           <LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="25px"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:id="@+id/linearLayout5" >
-        <RadioButton
-            android:background="@drawable/customradiowhite"
-            android:button="@android:color/transparent"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="2dp"
-            android:id="@+id/radioButton1" />
-			<TextView
+				android:id="@+id/radioButton4" />
+			<RadioButton
+				android:layout_marginBottom="10dp"
 				android:textSize="18dp"
 				android:textStyle="bold"
-				android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
 				android:textColor="#EEEFEF"
-				android:text="Dolandırıcılık"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
+				android:text="  Dolandırıcılık"
+				android:layout_marginLeft="20dp"
+				android:button="@drawable/customradiobutton"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/textView2" />
-            </LinearLayout>
-        <View
-				android:layout_marginTop="5dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view1" />
-         <LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="25px"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:id="@+id/linearLayout5" >
-        <RadioButton
-            android:background="@drawable/customradiowhite"
-            android:button="@android:color/transparent"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="2dp"
-            android:id="@+id/radioButton1" />
-			<TextView
+				android:id="@+id/radioButton5" />
+			<RadioButton
+				android:layout_marginBottom="10dp"
 				android:textSize="18dp"
 				android:textStyle="bold"
-				android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
 				android:textColor="#EEEFEF"
-				android:text="Diğer"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:layout_width="match_parent"
+				android:text="  Diğer"
+				android:layout_marginLeft="20dp"
+				android:layout_toRightOf="@+id/radioButton2"
+				android:button="@drawable/customradiobutton"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/textView2" />
-            </LinearLayout>
-        <View
-				android:layout_marginTop="5dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-				android:background="#6E6E6E"
-				android:layout_width="match_parent"
-				android:layout_height="2dp"
-				android:id="@+id/view1" />
-
-         <Button
-            android:text="Engelle"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_width="200dp"
-            android:layout_marginTop="50dp"
-            android:textColor="#EEEFEF"
-            android:textSize="22dp"
-            android:textStyle="bold"
-            android:layout_height="50dp"
-            android:background="@drawable/custombuton"
-            android:id="@+id/button1" />
-		</LinearLayout>
+				android:id="@+id/radioButton6" />
+		</RadioGroup>
+		<Button
+			android:text="Engelle"
+			android:layout_gravity="center"
+			android:gravity="center"
+			android:layout_width="200dp"
+			android:layout_marginTop="50dp"
+			android:textColor="#EEEFEF"
+			android:textSize="22dp"
+			android:textStyle="bold"
+			android:layout_height="50dp"
+			android:background="@drawable/custombuton"
+			android:id="@+id/button1" />
+	</LinearLayout>
 	
 </LinearLayout>
