--- a/Buptis/Resources/layout/PublicProfileBaseActivity.axml
+++ b/Buptis/Resources/layout/PublicProfileBaseActivity.axml
@@ -55,12 +55,12 @@
 							android:src="@mipmap/geriicon"
 							android:layout_width="40dp"
 							android:layout_height="match_parent"
-							android:id="@+id/ımageButton1" />
+							android:id="@+id/geributton" />
 					</RelativeLayout>
 					<dk.ostebaronen.droid.viewpagerindicator.LinePageIndicator
 						android:id="@+id/indicator"
 						android:padding="10dip"
-						android:layout_height="wrap_content"
+						android:layout_height="30dp"
 						android:layout_width="match_parent"
 						android:layout_alignParentBottom="true"
 						android:layout_centerHorizontal="true"
