--- a/Buptis/Resources/layout/MesajlarCustomContent.axml
+++ b/Buptis/Resources/layout/MesajlarCustomContent.axml
@@ -75,6 +75,7 @@
 		android:weightSum="100"
 		android:id="@+id/linearLayout4">
       <ImageView
+				android:visibility="invisible"
                 android:padding="3dp"
                 android:layout_centerInParent="true"
                 android:background="@drawable/customyildizbgwhite"
