--- a/Buptis/Resources/layout/GaleriVeResimEkleCutomCardView.axml
+++ b/Buptis/Resources/layout/GaleriVeResimEkleCutomCardView.axml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 	<android.support.v7.widget.CardView
 		android:layout_marginRight="10dp"
-		app:cardBackgroundColor="#000"
+		app:cardBackgroundColor="#fff"
 		android:id="@+id/card_view"
 		app:cardUseCompatPadding="false"
 		app:cardPreventCornerOverlap="false"
