--- a/Buptis/Resources/layout/GidenMesajBalon.axml
+++ b/Buptis/Resources/layout/GidenMesajBalon.axml
@@ -36,6 +36,12 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:id="@+id/textView1" />
+			<FFImageLoading.Views.ImageViewAsync
+				android:layout_gravity="center_horizontal"
+				android:id="@+id/imgPortada_item2"
+				android:scaleType="centerCrop"
+				android:layout_width="150dp"
+				android:layout_height="150dp"/>
 		</LinearLayout>
 	</android.support.v7.widget.CardView>
 </RelativeLayout>
