--- a/Buptis/Resources/layout/PrivateProfileGaleriVeFotografEkle.axml
+++ b/Buptis/Resources/layout/PrivateProfileGaleriVeFotografEkle.axml
@@ -57,6 +57,7 @@
 			android:layout_marginTop="20dp"
 			android:layout_marginLeft="20dp"
 			android:layout_marginRight="20dp"
+			android:layout_marginBottom="20dp"
 			android:minWidth="25px"
 			android:minHeight="25px"
 			android:layout_width="match_parent"
@@ -70,7 +71,6 @@
                 android:textSize="18dp"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
                 android:layout_marginBottom="30dp"
                 android:background="@drawable/custombuton"
                 android:layout_width="200dp"
