--- a/Buptis/Resources/layout/LokasyonCustomCardView.axml
+++ b/Buptis/Resources/layout/LokasyonCustomCardView.axml
@@ -4,6 +4,8 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:orientation="vertical"
 	android:background="@android:color/transparent"
+	android:paddingRight="20dp"
+	android:paddingLeft="20dp"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
 	<android.support.v7.widget.CardView
