--- a/Buptis/Resources/layout/PrivateProfileBizeYazin.axml
+++ b/Buptis/Resources/layout/PrivateProfileBizeYazin.axml
@@ -5,44 +5,44 @@
 	android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-		<LinearLayout
-			android:background="@drawable/lokasyonlarheadergradient"
-			android:orientation="vertical"
+	<LinearLayout
+		android:background="@drawable/lokasyonlarheadergradient"
+		android:orientation="vertical"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="105.5dp"
+		android:id="@+id/linearLayout1">
+		<RelativeLayout
+			android:layout_marginTop="39.5dp"
+			android:layout_marginLeft="15dp"
+			android:layout_marginRight="20dp"
 			android:minWidth="25px"
 			android:minHeight="25px"
 			android:layout_width="match_parent"
-			android:layout_height="80dp"
-			android:id="@+id/linearLayout1">
-			<RelativeLayout
-				android:layout_marginTop="20dp"
-				android:layout_marginLeft="15dp"
-				android:layout_marginRight="20dp"
-				android:minWidth="25px"
-				android:minHeight="25px"
-				android:layout_width="match_parent"
-				android:layout_height="40dp"
-				android:id="@+id/relativeLayout1">
-				<ImageButton
-					android:padding="10dp"
-					android:background="@null"
-					android:scaleType="centerInside"
-					android:src="@mipmap/geriicon"
-					android:layout_width="40dp"
-					android:layout_height="match_parent"
-					android:id="@+id/ımageButton1" />
-                <TextView
-                    android:text="Bize Yazın"
-                    android:layout_width="150dp"
-                    android:textColor="#fff"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="22dp"
-                    android:textStyle="bold"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/ımageButton1"
-                    android:id="@+id/textView1" />
-			</RelativeLayout>
-		</LinearLayout>
+			android:layout_height="40dp"
+			android:id="@+id/relativeLayout1">
+			<ImageButton
+				android:padding="10dp"
+				android:background="@null"
+				android:scaleType="centerInside"
+				android:src="@mipmap/geriicon"
+				android:layout_width="40dp"
+				android:layout_height="match_parent"
+				android:id="@+id/ımageButton1" />
+			<TextView
+				android:text="Bize Yazın"
+				android:layout_width="150dp"
+				android:textColor="#fff"
+				android:layout_marginTop="3dp"
+				android:layout_marginLeft="5dp"
+				android:textSize="22dp"
+				android:textStyle="bold"
+				android:layout_height="wrap_content"
+				android:layout_toRightOf="@+id/ımageButton1"
+				android:id="@+id/textView1" />
+		</RelativeLayout>
+	</LinearLayout>
 	<LinearLayout
 		android:orientation="vertical"
 		android:minWidth="25px"
@@ -61,18 +61,14 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/textView2" />
-		<EditText
-			android:textColorHint="#ddd"
-			android:hint="Bir konu belirtin..."
-			android:background="@null"
-			android:textSize="15dp"
+		<Spinner
+			android:popupBackground="#221E20"
 			android:layout_marginLeft="20dp"
 			android:layout_marginRight="20dp"
-			android:textColor="#EEEFEF"
-			android:inputType="textPersonName"
 			android:layout_width="match_parent"
-			android:layout_height="56.5dp"
-			android:id="@+id/editText1" />
+			android:layout_height="wrap_content"
+			android:id="@+id/spinner1"
+			android:layout_marginTop="11.5dp" />
 		<View
 			android:layout_margin="20dp"
 			android:background="#6E6E6E"
