--- a/Buptis/Resources/layout/EngellilerListCustomView.axml
+++ b/Buptis/Resources/layout/EngellilerListCustomView.axml
@@ -5,7 +5,7 @@
 	android:orientation="vertical"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:background="@null"
+	android:background="#000"
 	android:padding="5dp">
 	<RelativeLayout
 		android:minWidth="25px"
@@ -28,8 +28,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="70dp"
 		android:id="@+id/linearLayout1"
-		android:layout_toRightOf="@id/relativeLayout1"
-		android:layout_toLeftOf="@id/linearLayout4">
+		android:layout_toRightOf="@id/relativeLayout1">
 		<TextView
 			android:text="Lorem Impus"
 			android:textAppearance="?android:attr/textAppearanceSmall"
