--- a/Buptis/Resources/layout/GaleriVeResimEkleCutomCardView.axml
+++ b/Buptis/Resources/layout/GaleriVeResimEkleCutomCardView.axml
@@ -40,6 +40,20 @@
 				android:layout_width="30dp"
 				android:layout_height="30dp"
 				android:id="@+id/ımageButton1" />
+            <ImageButton
+                android:visibility="invisible"
+				android:elevation="5dp"
+				android:scaleType="centerInside"
+				android:layout_marginTop="10dp"
+				android:layout_marginLeft="10dp"
+				android:tint="#fff"
+				android:layout_alignParentLeft="true"
+				android:padding="5dp"
+				android:background="@drawable/custombuton"
+				android:src="@mipmap/profile_circle"
+				android:layout_width="30dp"
+				android:layout_height="30dp"
+				android:id="@+id/ımageButton2" />
 		</RelativeLayout>
 	</android.support.v7.widget.CardView>
 </LinearLayout>
