--- a/Buptis/Resources/layout/EngellilerListCustomView.axml
+++ b/Buptis/Resources/layout/EngellilerListCustomView.axml
@@ -5,8 +5,11 @@
 	android:orientation="vertical"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:background="#000"
-	android:padding="5dp">
+	android:background="@null"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingBottom="5dp"
+	android:paddingTop="5dp">
 	<RelativeLayout
 		android:minWidth="25px"
 		android:minHeight="25px"
